add base.sql
