# src/routes/users.routes.js
@@ -3,9 +3,9 @@ import { createProfile, deleteProfile, readProfileUser, updateProfile } from '..
 
 const router = Router()
 
-router.get('/:profileId', readProfileUser) // --> '/:profileId?userID=ID'
-router.post('/', createProfile) // --> '/?profileId?userID=ID'
-router.patch('/:profileId', updateProfile) // --> '/:profileId=ID & profileUserID=ID'
-router.delete('/:profileId', deleteProfile) // --> '/:profileId?userID=ID & profileUserID=ID'
+router.get('/:profileId', readProfileUser) // --> '?userID=ID'
+router.post('/', createProfile) // --> '/?profileId&userID=ID'
+router.patch('/:profileId', updateProfile) // --> '/:userId=ID & profileUserID=ID'
+router.delete('/:profileId', deleteProfile) // --> '/?userID=ID & profileUserID=ID'
 
 export default router
